Fixing overflow on mobile

--- a/priv/static/styles.css
+++ b/priv/static/styles.css
@@ -18,6 +18,8 @@ input {
 
 .inputs {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   gap: 1rem;
 }
 
